<resources>
    <string name="app_name">LABSCOM</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="label_crear_cuenta_encargado">Registro Encargado</string>
    <string name="label_forget_password">Olvidé mi contraseña</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="hint_num_empleado">Número de Empleado</string>
    <string name="text_Back_To_Login">Regresar al inicio</string>

    <string name="label_reservation">Solicitudes de Reservaciones</string>
    <string name="label_schedule_laboratory">Horarios de los Laboratorios</string>

    <string name="item_reservation_id">Reservación No.%1$d</string>
    <string name="item_reservation_alumno">Alumno: %1$s</string>
    <string name="item_reservation_boleta">Boleta: %1$s</string>
    <string name="item_reservation_status">Estado: %1$s</string>
    <string name="item_reservation_date">Fecha: %1$s</string>
    <string name="item_reservation_hour">Hora: %1$s</string>

    <string name="item_laboratory_classroom">Salón: %1$s</string>
    <string name="item_laboratory_edifice">Edificio: %1$s</string>
    <string name="item_laboratory_status">Estado: %1$s</string>

    <string name="description_reservation_id">Reservación No.%1$d</string>
    <string name="description_reservation_alumno">Alumno: %1$s</string>
    <string name="description_reservation_boleta">Boleta: %1$s</string>
    <string name="description_reservation_computadora">Computadora: %1$d</string>
    <string name="description_reservation_hora">Hora Inicio: %1$s</string>
    <string name="description_reservation_Fecha">Fecha: %1$s</string>
    <string name="description_reservation_estado">Estado: %1$s</string>


    <string name="label_send_notification">Enviar notificación</string>
    <string name="text_message_notiification">Mensaje:</string>
    <string name="text_title_notification">Título:</string>
    <string name="label_send_users_notification">Enviar a todos los Alumnos</string>
    <string name="title_layout_close_lab_notification">Notificación Cierre de Laboratorio</string>
    <string name="texto_ver_reporte">Ver Reporte</string>
    <string name="text_ver_horario">Ver Horario</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_student_reservation_id">Reservación No.%1$d</string>
    <string name="item_student_reservation_date">Para el día: %1$s</string>
    <string name="item_student_reservation_hour">A las: %1$s</string>
    <string name="item_student_reservation_computer">No. de PC: %1$d</string>
    <string name="item_student_reservation_createdAt">Fecha de Creación: %1$s</string>

    <string name="item_attendant_reservation_id">Reservación No.%1$d</string>
    <string name="item_attendant_reservation_date">Para el día: %1$s</string>
    <string name="item_attendant_reservation_hour">A las: %1$s</string>
    <string name="item_attendant_reservation_computer">No. de PC: %1$d</string>
    <string name="item_attendant_reservation_createdAt">Fecha de Creación: %1$s</string>

    <string name="salon_chart">Salon: %1$s</string>
    <string name="finalizadas_chart">Finalizadas: %1$d</string>
    <string name="edificio_chart">Edificio: %1$s</string>
    <string name="rechazadas_chart">Rechazadas: %1$d</string>
    <string name="canceladas_chart">Canceladas: %1$d</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">LABSCOM</string>


</resources>