<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profesor_gradient"
    android:fitsSystemWindows="true"
    tools:context=".activities.CloseLaboratoryActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_layout_close_lab_notification"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRefuseReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtViewReservationRefusedId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:gravity="center"
                    android:text="@string/label_send_users_notification"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/text_title_notification" />

                <EditText
                    android:id="@+id/editTextTitleNotification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/txtViewReservationStudentRefused"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/text_message_notiification" />

                <EditText
                    android:id="@+id/editTextMessageNotification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btnSendNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button_login"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/label_send_notification"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>

