<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profesor_gradient"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.attendant.GraphReservationActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarGraphicReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLaboratory"
            android:layout_width="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="6dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/iconImageViewReservation"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:src="@drawable/ic_baseline_desktop_windows_24"
                        android:tint="@color/colorPrimaryDark"
                        android:contentDescription="Computer">
                    </ImageView>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/iconImageViewReservation"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/textViewLaboratorio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Laboratorio Test"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewLabSalon"
                                android:layout_width="60sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salon_chart"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvFinalizadas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/finalizadas_chart"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewLabEdificio"
                                android:layout_width="65sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/edificio_chart"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvRechazadas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/rechazadas_chart"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewLabEstado"
                                android:layout_width="58sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Abierto"
                                android:textColor="@color/colorBlack" />

                            <TextView
                                android:id="@+id/tvCanceladas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/canceladas_chart"
                                android:textColor="@color/colorBlack" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGraphReservations"
            android:layout_width="340dp"
            android:layout_height="500dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">
            </com.github.mikephil.charting.charts.PieChart>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>